// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hydrate base hydrate 1`] = `
"<meta name=\\"styils-cache\\" mode=\\"none\\" content=\\"css-2242710476\\">
     <style data-styils=\\"css-ssr-global\\"></style>
     <style data-styils=\\"css-ssr\\">.css-2242710476{background-color:gainsboro;border-radius:9999px;}</style>"
`;

exports[`hydrate base hydrate 2`] = `
<html>
  <head>
    <meta
      content="css-2242710476"
      name="styils-cache"
    />
  </head>
  <body />
</html>
`;

exports[`hydrate global hydrate 1`] = `
"<meta name=\\"styils-cache\\" mode=\\"none\\" content=\\"\\">
     <style data-styils=\\"css-ssr-global\\">body{background-color:gainsboro;border-radius:9999px;}</style>
     <style data-styils=\\"css-ssr\\"></style>"
`;

exports[`hydrate global hydrate 2`] = `
<html>
  <head>
    <meta
      content=""
      mode="none"
      name="styils-cache"
    />
  </head>
  <body />
</html>
`;

exports[`hydrate global hydrate 3`] = `
"<meta name=\\"styils-cache\\" mode=\\"none\\" content=\\"\\">
     <style data-styils=\\"css-ssr-global\\"></style>
     <style data-styils=\\"css-ssr\\"></style>"
`;

exports[`hydrate global hydrate 4`] = `
<html>
  <head>
    <meta
      content=""
      mode="none"
      name="styils-cache"
    />
  </head>
  <body />
</html>
`;

exports[`hydrate global hydrate with sourcemap 1`] = `
<html>
  <head>
    <meta
      content="css-2242710476"
      mode="none"
      name="styils-cache"
    />
  </head>
  <body />
</html>
`;

exports[`hydrate mix hydrate 1`] = `
"<meta name=\\"styils-cache\\" mode=\\"none\\" content=\\"css-2242710476\\">
     <style data-styils=\\"css-ssr-global\\"></style>
     <style data-styils=\\"css-ssr\\">.css-2242710476{background-color:gainsboro;border-radius:9999px;}</style>"
`;

exports[`hydrate namespace hydrate 1`] = `
"<meta name=\\"styils-cache\\" mode=\\"none\\" content=\\"ssr-css-2242710476|ssr-css-2242710476.ssr-size-max|ssr-css-2242710476.ssr-size-small\\">
     <style data-styils=\\"css-ssr-global\\"></style>
     <style data-styils=\\"css-ssr\\">.ssr-css-2242710476{background-color:gainsboro;border-radius:9999px;}.ssr-css-2242710476.ssr-size-max{font-size:12px;}.ssr-css-2242710476.ssr-size-small{font-size:14px;}</style>"
`;

exports[`hydrate namespace hydrate 2`] = `
<html>
  <head>
    <meta
      content="ssr-css-2242710476|ssr-css-2242710476.ssr-size-max|ssr-css-2242710476.ssr-size-small"
      name="styils-cache"
    />
  </head>
  <body />
</html>
`;

exports[`hydrate render Element hydrate 1`] = `
<div>
  <meta
    content="css-2242710476"
    mode="none"
    name="styils-cache"
  />
  <style
    data-styils="css-ssr-global"
  />
  <style
    data-styils="css-ssr"
  >
    .css-2242710476{background-color:gainsboro;border-radius:9999px;}
  </style>
</div>
`;

exports[`hydrate variants hydrate 1`] = `
"<meta name=\\"styils-cache\\" mode=\\"none\\" content=\\"css-2242710476|css-2242710476.size-max|css-2242710476.size-small\\">
     <style data-styils=\\"css-ssr-global\\"></style>
     <style data-styils=\\"css-ssr\\">.css-2242710476{background-color:gainsboro;border-radius:9999px;}.css-2242710476.size-max{font-size:12px;}.css-2242710476.size-small{font-size:14px;}</style>"
`;

exports[`hydrate variants hydrate 2`] = `
<html>
  <head>
    <meta
      content="css-2242710476|css-2242710476.size-max|css-2242710476.size-small"
      name="styils-cache"
    />
  </head>
  <body />
</html>
`;

exports[`system createSystem 1`] = `
<div>
  <div
    data-testid="use-system"
  >
    <button
      class="css-3433634237"
    />
    light
  </div>
</div>
`;

exports[`system createSystem 2`] = `
<html>
  <head>
    <style
      data-styils="css"
    >
      
      .css-3433634237{color:red;}
    </style>
  </head>
  <body>
    <div>
      <div
        data-testid="use-system"
      >
        <button
          class="css-3433634237"
        />
        light
      </div>
    </div>
  </body>
</html>
`;

exports[`system createSystem 3`] = `
<div>
  <div
    data-testid="use-system"
  >
    <button
      class="css-3183262666"
    />
    dark
  </div>
</div>
`;

exports[`system createSystem 4`] = `
<html>
  <head>
    <style
      data-styils="css"
    >
      
      .css-3433634237{color:red;}
    </style>
    <style
      data-styils="css"
    >
      
      .css-3183262666{color:blue;}
    </style>
  </head>
  <body>
    <div>
      <div
        data-testid="use-system"
      >
        <button
          class="css-3183262666"
        />
        dark
      </div>
    </div>
  </body>
</html>
`;

exports[`system global 1`] = `
<html>
  <head>
    <style
      data-styils="css"
    >
      
      body{background-color:#fff;}
    </style>
  </head>
  <body />
</html>
`;

exports[`system global with sourceMap 1`] = `
<html>
  <head>
    <style
      data-styils="css"
    >
      
      body{background-color:#fff;}sourceMap
    </style>
  </head>
  <body />
</html>
`;

exports[`system styled 1`] = `
<div>
  <button
    class="css-3397010960"
  />
</div>
`;

exports[`system styled 2`] = `
<html>
  <head>
    <style
      data-styils="css"
    >
      
      .css-3397010960{background-color:gainsboro;border-radius:9999px;font-weight:500;padding:0.75em 1em;border:0px;transition:all 200ms ease;}.css-3397010960:hover{transform:translateY(-2px);box-shadow:0 10px 25px rgba(0, 0, 0, .3);}
    </style>
  </head>
  <body>
    <div>
      <button
        class="css-3397010960"
      />
    </div>
  </body>
</html>
`;

exports[`system styled className 1`] = `
<div>
  <button
    class="foo css-2129283522"
  />
</div>
`;

exports[`system styled className 2`] = `
<html>
  <head>
    <style
      data-styils="css"
    >
      
      .css-2129283522{background-color:gainsboro;}
    </style>
  </head>
  <body>
    <div>
      <button
        class="foo css-2129283522"
      />
    </div>
  </body>
</html>
`;

exports[`system styled namespace 1`] = `
<div>
  <button
    class="button-css-3465392085"
  />
</div>
`;

exports[`system styled production 1`] = `
<div>
  <button
    class="css-3465392085"
  />
</div>
`;

exports[`system styled with sourceMap 1`] = `
<html>
  <head>
    <style
      data-styils="css"
    >
      
      .css-2129283522{background-color:gainsboro;}1
    </style>
  </head>
  <body />
</html>
`;

exports[`system styled with styled components 1`] = `
<div>
  <button
    class="css-3433634237 css-2341007075"
  />
</div>
`;

exports[`system styled with styled components 2`] = `
<html>
  <head>
    <style
      data-styils="css"
    >
      
      .css-2341007075{background-color:#fff;}
    </style>
    <style
      data-styils="css"
    >
      
      .css-3433634237{color:red;}
    </style>
  </head>
  <body>
    <div>
      <button
        class="css-3433634237 css-2341007075"
      />
    </div>
  </body>
</html>
`;

exports[`system styled with theme and sourceMap 1`] = `
<html>
  <head>
    <style
      data-styils="css"
    >
      
      .css-916997065{background-color:red;}1
    </style>
  </head>
  <body>
    <div>
      <button
        class="css-916997065"
      >
        light
      </button>
    </div>
  </body>
</html>
`;

exports[`system styled with theme and sourceMap 2`] = `
<html>
  <head>
    <style
      data-styils="css"
    >
      
      .css-916997065{background-color:red;}1
    </style>
    <style
      data-styils="css"
    >
      
      .css-2405978758{background-color:blue;}1
    </style>
  </head>
  <body>
    <div>
      <button
        class="css-2405978758"
      >
        dark
      </button>
    </div>
  </body>
</html>
`;

exports[`system theme does not render repeatedly 1`] = `
<div>
  <div
    data-testid="use-system"
  >
    <button
      class="css-3433634237"
    />
    light
  </div>
</div>
`;

exports[`system theme does not render repeatedly 2`] = `
<html>
  <head>
    <style
      data-styils="css"
    >
      
      .css-3433634237{color:red;}
    </style>
  </head>
  <body>
    <div>
      <div
        data-testid="use-system"
      >
        <button
          class="css-3433634237"
        />
        light
      </div>
    </div>
  </body>
</html>
`;

exports[`system theme does not render repeatedly 3`] = `
<div>
  <div
    data-testid="use-system"
  >
    <button
      class="css-3183262666"
    />
    dark
  </div>
</div>
`;

exports[`system theme does not render repeatedly 4`] = `
<html>
  <head>
    <style
      data-styils="css"
    >
      
      .css-3433634237{color:red;}
    </style>
    <style
      data-styils="css"
    >
      
      .css-3183262666{color:blue;}
    </style>
  </head>
  <body>
    <div>
      <div
        data-testid="use-system"
      >
        <button
          class="css-3183262666"
        />
        dark
      </div>
    </div>
  </body>
</html>
`;

exports[`system theme does not render repeatedly 5`] = `
<div>
  <div
    data-testid="use-system"
  >
    <button
      class="css-3433634237"
    />
    light
  </div>
</div>
`;

exports[`system theme does not render repeatedly 6`] = `
<html>
  <head>
    <style
      data-styils="css"
    >
      
      .css-3433634237{color:red;}
    </style>
    <style
      data-styils="css"
    >
      
      .css-3183262666{color:blue;}
    </style>
  </head>
  <body>
    <div>
      <div
        data-testid="use-system"
      >
        <button
          class="css-3433634237"
        />
        light
      </div>
    </div>
  </body>
</html>
`;

exports[`system variants 1`] = `
<div>
  <div
    data-testid="styled-variants"
  >
    <button
      class="css-3433634237 size-small"
    >
      small
    </button>
  </div>
</div>
`;

exports[`system variants 2`] = `
<html>
  <head>
    <style
      data-styils="css"
    >
      
      .css-3433634237{color:red;}.css-3433634237.size-max{font-size:99px;}.css-3433634237.size-small{font-size:14px;}
    </style>
  </head>
  <body>
    <div>
      <div
        data-testid="styled-variants"
      >
        <button
          class="css-3433634237 size-small"
        >
          small
        </button>
      </div>
    </div>
  </body>
</html>
`;

exports[`system variants 3`] = `
<div>
  <div
    data-testid="styled-variants"
  >
    <button
      class="css-3433634237 size-max"
    >
      max
    </button>
  </div>
</div>
`;

exports[`system variants 4`] = `
<html>
  <head>
    <style
      data-styils="css"
    >
      
      .css-3433634237{color:red;}.css-3433634237.size-max{font-size:99px;}.css-3433634237.size-small{font-size:14px;}
    </style>
  </head>
  <body>
    <div>
      <div
        data-testid="styled-variants"
      >
        <button
          class="css-3433634237 size-max"
        >
          max
        </button>
      </div>
    </div>
  </body>
</html>
`;

exports[`system variants single 1`] = `
<div>
  <div
    data-testid="styled-variants"
  >
    <button
      class="css-3433634237 size-small"
    >
      small
    </button>
  </div>
</div>
`;

exports[`system variants single 2`] = `
<html>
  <head>
    <style
      data-styils="css"
    >
      
      .css-3433634237{color:red;}.css-3433634237.size-small{font-size:14px;}
    </style>
  </head>
  <body>
    <div>
      <div
        data-testid="styled-variants"
      >
        <button
          class="css-3433634237 size-small"
        >
          small
        </button>
      </div>
    </div>
  </body>
</html>
`;

exports[`system variants single 3`] = `
<div>
  <div
    data-testid="styled-variants"
  >
    <button
      class="css-3433634237"
    />
  </div>
</div>
`;

exports[`system variants single 4`] = `
<html>
  <head>
    <style
      data-styils="css"
    >
      
      .css-3433634237{color:red;}.css-3433634237.size-small{font-size:14px;}
    </style>
  </head>
  <body>
    <div>
      <div
        data-testid="styled-variants"
      >
        <button
          class="css-3433634237"
        />
      </div>
    </div>
  </body>
</html>
`;

exports[`system variants theme 1`] = `
<div>
  <div
    data-testid="use-system"
  >
    <button
      class="css-3433634237 color-light"
    />
    light
  </div>
</div>
`;

exports[`system variants theme 2`] = `
<html>
  <head>
    <style
      data-styils="css"
    >
      
      .css-3433634237{color:red;}.css-3433634237.color-light{color:red;}.css-3433634237.color-dark{color:red;}
    </style>
  </head>
  <body>
    <div>
      <div
        data-testid="use-system"
      >
        <button
          class="css-3433634237 color-light"
        />
        light
      </div>
    </div>
  </body>
</html>
`;

exports[`system variants theme 3`] = `
<div>
  <div
    data-testid="use-system"
  >
    <button
      class="css-3433634237 color-dark"
    />
    dark
  </div>
</div>
`;

exports[`system variants theme 4`] = `
<html>
  <head>
    <style
      data-styils="css"
    >
      
      .css-3433634237{color:red;}.css-3433634237.color-light{color:red;}.css-3433634237.color-dark{color:red;}
    </style>
  </head>
  <body>
    <div>
      <div
        data-testid="use-system"
      >
        <button
          class="css-3433634237 color-dark"
        />
        dark
      </div>
    </div>
  </body>
</html>
`;

exports[`system with theme global 1`] = `
<div>
  <div>
    light
  </div>
</div>
`;

exports[`system with theme global 2`] = `
<html>
  <head>
    <style
      data-styils="css"
    >
      
      body{background-color:blue;}
    </style>
  </head>
  <body>
    <div>
      <div>
        light
      </div>
    </div>
  </body>
</html>
`;

exports[`system with theme global 3`] = `
<div>
  <div>
    dark
  </div>
</div>
`;

exports[`system with theme global 4`] = `
<html>
  <head>
    <style
      data-styils="css"
    >
      
      body{background-color:red;}
    </style>
  </head>
  <body>
    <div>
      <div>
        dark
      </div>
    </div>
  </body>
</html>
`;

exports[`system with theme global 5`] = `
<div>
  <div>
    light
  </div>
</div>
`;

exports[`system with theme global 6`] = `
<html>
  <head>
    <style
      data-styils="css"
    >
      
      body{background-color:blue;}
    </style>
  </head>
  <body>
    <div>
      <div>
        light
      </div>
    </div>
  </body>
</html>
`;

exports[`system with theme global and sourcemap 1`] = `
<html>
  <head>
    <style
      data-styils="css"
    >
      
      body{background-color:red;}1
    </style>
  </head>
  <body>
    <div>
      <div>
        dark
      </div>
    </div>
  </body>
</html>
`;
